--- a/Image_Classification.ipynb
+++ b/Image_Classification.ipynb
@@ -5527,7 +5527,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# 导入必要的库\n",
         "import torch\n",
         "from torch import nn, optim\n",
         "from torch.utils.data import DataLoader\n",
@@ -5536,20 +5535,16 @@
         "from datasets import load_dataset\n",
         "import numpy as np\n",
         "\n",
-        "# 设置设备\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
-        "# 加载数据集\n",
         "dataset = load_dataset('keremberke/pokemon-classification','full')\n",
         "\n",
-        "# 打印数据集结构\n",
         "print(dataset)\n",
         "\n",
-        "# 获取所有标签\n",
         "all_labels = []\n",
         "for split in ['train', 'validation', 'test']:\n",
         "    all_labels.extend([example['labels'] for example in dataset[split]])\n",
-        "num_classes = max(all_labels) + 1  # 类别数量应该是最大标签值 + 1\n",
+        "num_classes = max(all_labels) + 1  \n",
         "print(f\"Number of classes: {num_classes}\")\n",
         "\n",
         "# 数据预处理\n",
@@ -5559,7 +5554,6 @@
         "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
         "])\n",
         "\n",
-        "# 创建数据加载器\n",
         "class PokemonDataset(torch.utils.data.Dataset):\n",
         "    def __init__(self, dataset, transform=None):\n",
         "        self.dataset = dataset\n",
@@ -5570,7 +5564,7 @@
         "\n",
         "    def __getitem__(self, idx):\n",
         "        image = self.dataset[idx]['image']\n",
-        "        label = self.dataset[idx]['labels']  # 使用正确的键\n",
+        "        label = self.dataset[idx]['labels']  \n",
         "        if self.transform:\n",
         "            image = self.transform(image)\n",
         "        return image, label\n",
@@ -5581,14 +5575,12 @@
         "# 定义模型\n",
         "weights = models.ResNet18_Weights.DEFAULT\n",
         "model = models.resnet18(weights=weights)\n",
-        "model.fc = nn.Linear(model.fc.in_features, num_classes)  # 使用正确的类别数量\n",
+        "model.fc = nn.Linear(model.fc.in_features, num_classes) \n",
         "model = model.to(device)\n",
         "\n",
-        "# 定义损失函数和优化器\n",
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
         "\n",
-        "# 训练模型\n",
         "num_epochs = 10\n",
         "train_acc = []\n",
         "\n",
@@ -5612,7 +5604,6 @@
         "    train_acc.append(accuracy)\n",
         "    print(f'Epoch {epoch+1}/{num_epochs}, Accuracy: {accuracy:.2f}%')\n",
         "\n",
-        "# 绘制准确率曲线\n",
         "plt.plot(np.arange(1, num_epochs+1), train_acc, label='Training Accuracy')\n",
         "plt.xlabel('Epoch')\n",
         "plt.ylabel('Accuracy')\n",
