Image_Classification.ipynb

--- a/Image_Classification.ipynb
+++ b/Image_Classification.ipynb
@@ -5255,7 +5255,7 @@
         "    for image in images:\n",
         "        if isinstance(image, Image.Image):\n",
         "            image = image.resize(img_size)\n",
-        "            image = np.array(image, dtype=np.float32) / 255.0  # 归一化并确保类型一致\n",
+        "            image = np.array(image, dtype=np.float32) / 255.0  \n",
         "            if image.shape != (64, 64, 3):\n",
         "                print(f\"Unexpected image shape after resize and conversion: {image.shape}\")\n",
         "                image = np.zeros((64, 64, 3), dtype=np.float32)\n",
@@ -5572,7 +5572,6 @@
         "pokemon_dataset = PokemonDataset(dataset['train'], transform=transform)\n",
         "dataloader = DataLoader(pokemon_dataset, batch_size=32, shuffle=True)\n",
         "\n",
-        "# 定义模型\n",
         "weights = models.ResNet18_Weights.DEFAULT\n",
         "model = models.resnet18(weights=weights)\n",
         "model.fc = nn.Linear(model.fc.in_features, num_classes) \n",
@@ -5853,16 +5852,12 @@
         "from datasets import load_dataset\n",
         "import numpy as np\n",
         "\n",
-        "# 设置设备\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
-        "# 加载数据集\n",
         "dataset = load_dataset('keremberke/pokemon-classification', 'full')\n",
         "\n",
-        "# 打印数据集的键\n",
         "print(dataset.column_names)\n",
         "\n",
-        "# 打印数据集的一个示例\n",
         "print(dataset['train'][0])"
       ],
       "metadata": {
@@ -5896,14 +5891,11 @@
         "from sklearn.metrics import accuracy_score\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "# 加载pokemon数据集\n",
         "dataset = load_dataset('keremberke/chest-xray-classification','full')\n",
         "\n",
-        "# 查看数据集的特征和一些样本数据\n",
         "print(dataset)\n",
-        "print(dataset['train'][0])  # 查看第一个样本的数据结构\n",
+        "print(dataset['train'][0])\n",
         "\n",
-        "# 定义图像的目标大小\n",
         "img_size = (64, 64)\n",
         "\n",
         "\n",
@@ -5915,33 +5907,28 @@
         "    for image in images:\n",
         "        if isinstance(image, Image.Image):\n",
         "            image = image.resize(img_size)\n",
-        "            image = np.array(image, dtype=np.float32) / 255.0  # 归一化并确保类型一致\n",
+        "            image = np.array(image, dtype=np.float32) / 255.0\n",
         "            if image.shape != (64, 64, 3):\n",
         "                print(f\"Unexpected image shape after resize and conversion: {image.shape}\")\n",
-        "                image = np.zeros((64, 64, 3), dtype=np.float32)  # 使用默认值，避免错误\n",
+        "                image = np.zeros((64, 64, 3), dtype=np.float32)\n",
         "        else:\n",
-        "            image = np.zeros((64, 64, 3), dtype=np.float32)  # 使用默认值，避免错误\n",
+        "            image = np.zeros((64, 64, 3), dtype=np.float32)\n",
         "        processed_images.append(image)\n",
         "\n",
-        "    # 确保返回的processed_images是一个numpy数组，并且所有图像的形状一致\n",
         "    processed_images = np.array(processed_images, dtype=np.float32)\n",
-        "    labels = np.array(labels, dtype=np.int64)  # 确保标签也是numpy数组\n",
+        "    labels = np.array(labels, dtype=np.int64)\n",
         "\n",
         "    return {'images': processed_images, 'labels': labels}\n",
         "\n",
         "\n",
-        "# 应用预处理函数\n",
         "dataset = dataset.map(preprocess_image, batched=True)\n",
         "\n",
-        "# 获取图像数据和标签\n",
         "X = np.array(dataset['train']['images'])\n",
         "y = np.array(dataset['train']['labels'])\n",
         "\n",
-        "# 展平图像数据\n",
         "X_flattened = X.reshape(X.shape[0], -1)\n",
         "\n",
         "\n",
-        "# 函数：显示不同PCA组件数量下的准确率\n",
         "def plot_accuracy_variation(X, y, max_components=100, step=10):\n",
         "    accuracies = []\n",
         "    components = range(10, max_components + 1, step)\n",
@@ -5970,7 +5957,6 @@
         "    plt.show()\n",
         "\n",
         "\n",
-        "# 调用函数显示准确率波动\n",
         "plot_accuracy_variation(X_flattened, y, max_components=100, step=10)"
       ],
       "metadata": {
@@ -6270,30 +6256,24 @@
         "from datasets import load_dataset\n",
         "import numpy as np\n",
         "\n",
-        "# 设置设备\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "\n",
-        "# 加载数据集。\n",
         "dataset = load_dataset('keremberke/chest-xray-classification','full')\n",
         "\n",
-        "# 打印数据集结构\n",
         "print(dataset)\n",
         "\n",
-        "# 获取所有标签\n",
         "all_labels = []\n",
         "for split in ['train', 'validation', 'test']:\n",
         "    all_labels.extend([example['labels'] for example in dataset[split]])\n",
-        "num_classes = max(all_labels) + 1  # 类别数量应该是最大标签值 + 1\n",
+        "num_classes = max(all_labels) + 1\n",
         "print(f\"Number of classes: {num_classes}\")\n",
         "\n",
-        "# 数据预处理\n",
         "transform = transforms.Compose([\n",
         "    transforms.Resize((224, 224)),\n",
         "    transforms.ToTensor(),\n",
         "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
         "])\n",
         "\n",
-        "# 创建数据加载器\n",
         "class PokemonDataset(torch.utils.data.Dataset):\n",
         "    def __init__(self, dataset, transform=None):\n",
         "        self.dataset = dataset\n",
@@ -6304,7 +6284,7 @@
         "\n",
         "    def __getitem__(self, idx):\n",
         "        image = self.dataset[idx]['image']\n",
-        "        label = self.dataset[idx]['labels']  # 使用正确的键\n",
+        "        label = self.dataset[idx]['labels']\n",
         "        if self.transform:\n",
         "            image = self.transform(image)\n",
         "        return image, label\n",
@@ -6312,17 +6292,14 @@
         "pokemon_dataset = PokemonDataset(dataset['train'], transform=transform)\n",
         "dataloader = DataLoader(pokemon_dataset, batch_size=32, shuffle=True)\n",
         "\n",
-        "# 定义模型\n",
         "weights = models.ResNet18_Weights.DEFAULT\n",
         "model = models.resnet18(weights=weights)\n",
-        "model.fc = nn.Linear(model.fc.in_features, num_classes)  # 使用正确的类别数量\n",
+        "model.fc = nn.Linear(model.fc.in_features, num_classes) \n",
         "model = model.to(device)\n",
         "\n",
-        "# 定义损失函数和优化器\n",
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
         "\n",
-        "# 训练模型\n",
         "num_epochs = 10\n",
         "train_acc = []\n",
         "\n",
@@ -6346,7 +6323,6 @@
         "    train_acc.append(accuracy)\n",
         "    print(f'Epoch {epoch+1}/{num_epochs}, Accuracy: {accuracy:.2f}%')\n",
         "\n",
-        "# 绘制准确率曲线\n",
         "plt.plot(np.arange(1, num_epochs+1), train_acc, label='Training Accuracy')\n",
         "plt.xlabel('Epoch')\n",
         "plt.ylabel('Accuracy')\n",
